2010-10-22  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Installing GRUB using grub-install): Proofread.
	(Supported kernels): Likewise.

2010-10-18  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Make mktemp invocations portable.

	* grub-core/genmod.sh.in: Use mktemp with an explicit template, and
	exit if mktemp fails.
	* tests/grub_script_blockarg.in: Likewise.
	* tests/partmap_test.in: Likewise.
	* tests/util/grub-shell-tester.in: Likewise.
	* tests/util/grub-shell.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.
	* Makefile.am: Likewise, and chain shell commands with `&&'
	instead of ';'.
	* util/grub-mkrescue.in: Use the same explicit template as above, and
	exit if mktemp fails.

2010-10-18  BVK Chaitanya  <bvk.groups@gmail.com>

	* util/grub.d/10_linux.in: Fix built-in initramfs image mode for
	Linux kernel, reported by Dennis Schridde.

2010-10-17  Szymon Janc <szymon@janc.net.pl>

       * grub-core/normal/auth.c (grub_auth_check_authentication):
       Set-but-not-used variable removed.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (GNU/Linux): Document APM unavailability with
	32-bit linux protocol.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (grub_console_setcursor): Check
	cursor shape for sanity.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Installation): Document buggy BIOS install.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Installation): Indent.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): New parameter allow_floppy.
	(arguments): New member allow_floppy.
	(argp_parser): Handle --allow-floppy.
	(main): Pass allow_floppy.
	* util/grub-install.in: New option --allow-floppy passed though to
	grub-setup.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Handle partitionless disks.
